dev/scss/article.scss
.article-content {
  font-size: 16px;  // establishes em basis
  @media #{$mq_md} {
    font-size: 22px;
    font-weight: 300;
  }
  @media #{$mq_lg} {
    font-size: 24px;
  }

  .entry-title {
    font-size: 2.5em;
    font-weight: 500;
    line-height: 1;
    margin-bottom: 6px;
    @media #{$mq_md} {
      font-size: 2.625em;
      font-weight: 300;
    }
    @media #{$mq_lg} {
      font-size: 3em;
    }
  }

  .post-meta {
    font-size: 1em;
    @media #{$mq_md} {
      font-size: 0.75em;
    }
  }

  // Main Article Content
  .entry-content {

    h2 {
      font-size: 2em;
      line-height: 1.125;
      font-weight: 400;
      margin-top: 2em;
      margin-bottom: 0.5em;
      @media #{$mq_md} {
        font-size: 1.625em;
        font-weight: 600;
      }
    }
    h3 {
      font-size: 1.75em;
      font-weight: 300;
      line-height: 1.375;
      margin-top: 1.75em;
      margin-bottom: 0.5em;
      @media #{$mq_md} {
        font-size: 1.375em;
        font-weight: 400;
      }
    }
    h4 {
      font-size: 1.25em;
      line-height: 1.375;
      font-weight: 500;
      margin-top: 1.625em;
      margin-bottom: 0.5em;
      @media #{$mq_md} {
        font-size: 1.25em;
        font-weight: 400;
      }
    }
    h5 {
      font-size: 1em;
      line-height: 1.125;
      font-weight: 500;
      margin-top: 1.625em;
      text-transform: uppercase;
      margin-bottom: 0.5em;
      @media #{$mq_md} {
        font-size: 1em;
        font-weight: 500;
      }
    }

    // header effects
    h2::before,
    h3::before,
    h4::before,
    h5::before {
      color: $c_light50;
      display: inline-block;
      font-family: monospace;
      font-size: 12px;
      @media #{$mq_md} {
        font-size: 16px;
      }
      @media #{$mq_lg} {
        font-size: 20px;
      }
      margin-right: 0.25em;
    }
    h2::before {
      content: 'h2';
    }
    h3::before {
      content: 'h3';
    }
    h4::before {
      content: 'h4';
    }
    h5::before {
      content: 'h5';
    }

    p,
    li {
      font-size: 1em;
      font-weight: 400;
      line-height: 1.625;
      max-width: 65ch; // accessibility recommendation is 80 max
      @media #{$mq_md} {
        font-weight: 300;
      }
    }
    p:not(:last-of-type) {
      margin-bottom: 1.5em;
    }
    figcaption {
      font-size: 1em;
      line-height: 1.125;
      @media #{$mq_md} {
        font-size: 0.75em;
      }
    }

    // emphasis
    strong,
    b {
      font-weight: 600;
      @media #{$mq_md} {
        font-weight: 500;
      }
    }
    strong,
    b,
    em {
      color: $c_truewhite;
      strong,
      b,
      em {
        color: #fff;
        font-size: 1.05em; // tiny bump in emphasis
      }
    }
    del {
      color: $c_light70;
    }
    a,
    span[style*="color:"] { // Exception for when color is manually changed in the WP editor
      strong,
      b,
      em,
      del {
        color: inherit;
      }
    }

    // Text Links
    a {
      overflow-wrap: break-word;
      text-decoration: underline;
      word-break: break-word;
      word-wrap: break-word;
    }
    a[href^="#a_"]::after {
      content: '#';
      display: inline-block;
      font-size: 0.75em;
      margin: 0 0.25em;
      speak: none;
      vertical-align: text-top;
      @media #{$mq_md} {
        font-size: 0.625em;
      }
    }

    // lists
    ul,
    ol {
      padding-left: 2em;
      margin-bottom: 1.5em;
      ul, ol {
        border-color: $c_grey80;
        border-style: solid;
        border-width: 1px 0;
        margin: 0.25em 2em 1em 0;
        padding-bottom: 0.25em;
        padding-right: 0.25em;
        padding-top: 0.25em;
        ul, ol {
          border-color: $c_grey70;
          ul, ol {
            border-color: $c_grey60;
          }
        }
      }
    }
    ul {
      list-style-type: disc;
      ul {
        list-style-type: square;
        ul {
          list-style-type: circle;
        }
      }
    }
    ol {
      list-style-type: decimal-leading-zero;
      ol {
        list-style-type: upper-alpha;
        ol {
          list-style-type: lower-roman;
          ol {
            list-style-type: lower-alpha;
          }
        }
      }
    }

    // Images
    img {
      height: auto;
      margin: 0 auto;
      max-height: 80vh;
      max-width: 100%;
      width: auto;
    }

    .wp-block-image {
      margin-bottom: 1.5em;
    }

    figure {
      // center by default
      margin-left: auto;
      margin-right: auto;

      figcaption {
        margin: 8px 0 0;
        min-width: 240px; // prevent missing or skinny images from making caption text unreadable
        text-align: center;
      }

      &.alignleft,
      &.alignleft img {
        margin-left: 0;
      }

      &.alignright,
      &.alignright img {
        margin-right: 0;
      }

    }


    // Embeds
    .wp-block-embed iframe {
      margin-left: auto;
      margin-right: auto;
      min-height: 220px;
      @media #{$mq_md} {
        min-height: 280px;
      }
      @media #{$mq_lg} {
        height: 512px;
        max-height: 70vh;
        width: 100%;
      }
    }


    // Quotes
    blockquote {
      background-color: $c_grey80;
      border-left: 8px solid $c_grey60;
      margin: 2em 0;
      padding: 0.75em 0.75em 1.25em 1.25em;
      p,
      cite {
        line-height: 1.5;
      }
      p {
        margin-top: 0.5em;
      }
      cite {
        display: inline-block;
        font-size: 1em;
        margin-top: 1.25em;
        @media #{$mq_md} {
          font-size: 0.75em;
        }
      }
      &:last-child {
        margin-bottom: 0;
      }
    }

    .wp-block-pullquote {
      // Pull Quotes aren't usually actual Quotes. They're more for emphasis.
      margin: 2em auto;
      padding: 0;
      blockquote {
        margin: 0;
        padding: 0.75em 0.75em 1.25em;
        text-align: center;
        p {
          font-size: 1.375em;
        }
      }
    }

    // Horizontal Rules
    hr {
      margin: 2em auto;
      width: 60%;
      border: none;
      border-top: 1px solid $c_accent;
    }

    // Tables
    table {
      border-collapse: collapse;
      font-size: 1em;
      line-height: 1.2;
      max-width: 100%;
      margin-bottom: 3em;
      th,
      td {
        padding: 0.25rem;
        border: 1px solid $c_grey50;
      }
      th {
        font-weight: bold;
        text-transform: uppercase;
      }
    }

    // pre-formatted
    pre {
      border: 1px solid $c_grey50;
      margin-bottom: 1em;
      padding: 8px;
    }

  }

  .entry-footer {
    // article-specific meta section (categories, tags)
    background-color: $c_grey40;

    .thanks-header {
      font-size: 1.625em;
      font-weight: 300;
      text-align: center;
      @media #{$mq_md} {
        font-size: 1.25em;
      }
    }

    p {
      font-size: 1em;
      font-weight: 400;
      @media #{$mq_md} {
        font-size: 14px;
        font-weight: 400;
      }
      a {
        white-space: nowrap;
      }
      &:first-of-type {
        margin-top: 2em;
      }
    }

  }

}

